products/storage/longhorn/templates/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: longhorn-security-policy
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: longhorn
  oidc:
    clientID: "SgMvGGFJLzrs8gcyfGLKbTRRYgzhUGdSQqB41Bft"
    clientSecret:
      name: oidc-secret
    provider:
      issuer: https://authentik.feddema.dev/application/o/longhorn/
    redirectURL: https://longhorn.feddema.dev/oauth2/callback
    logoutPath: /oauth2/logout
